# beacon-of-hope

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml
Personas & User Stories/: User Stories.docx
about/: index.html
back-end/: .gitignore  README.md  pyproject.toml
backend/: .gitignore  .pre-commit-config.yaml  README.md  notes.md  pyproject.toml
backend/boosted_bandit/trial0/: recs_bk.txt
backend/boosted_bandit/trial0/train/: train_bk.txt
backend/config/: settings.py  urls.py
backend/core/: admin.py  bandit_helpers.py  firebase.py  firebase_funs.py  forms.py  item_coverage_metric.py  metrics.py  models.py  nutritional_constraint_metric.py  populate_db.py  recomendation.py  recommendation.py  recommendation_helpers.py  urls.py  user.py  views.py
backend/core/modules/: firebase.py  nutritional_constraint_metric.py  recommendation_helpers.py  user.py
backend/core/views/: __init__.py  food_item_views.py  meal_views.py  recommendation_views.py  user_views.py
backend/tests/: test_complete_tests.py  test_firestore.py  test_get_recommendation.py  test_login.py  test_recipes.py
backend/tests/mocks/: mocks.py
backend/user_input_data/: user_0.json
backend/utils/: annotate_r3_with_vegan_gluten_sugar.py  bandit_helpers.py  clean_db.py  data_loader.py  firebase.py  firebase_funs.py  populate_db.py  r3_analysis.py  reccomendation.py
docs/: about.md  index.md
front-end/: .gitignore  README.md  package-lock.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vitest.config.ts
(+123 files in other folders)
