[tool.poetry]
name = "beacon-of-hope"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
firebase-admin = "^6.6.0"
black = "^24.10.0"
pre-commit = "^4.0.1"
pymongo = "^4.10.1"
django-cors-headers = "^4.6.0"
tqdm = "^4.67.1"
termcolor = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
